# -*- coding: utf-8 -*-
#
# Copyright (C) 2019 CERN.
# Copyright (C) 2019 Northwestern University.
# Copyright (C) 2022-2025 Graz University of Technology.
#
# Invenio-Cli is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-cli
version = attr: invenio_cli.__version__
description = "Invenio module to ease the creation and management of applications."
long_description = file: README.rst, CHANGES.rst
keywords = invenio-cli
license = MIT
author = CERN & Northwestern University
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-cli
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Babel>=2.8
    cookiecutter>=2.0.0
    click>=7.1.1
    click-default-group>=1.2.2
    docker>=7.1.0
    pipfile>=0.0.2
    pipenv>=2020.6.2
    PyYAML>=5.1.2
    pynpm>=0.3.0
    virtualenv>=20.0.35
    tomli>=1.1.0;python_version<"3.11"

[options.extras_require]
tests =
    pytest-black>=0.6.0
    pytest-invenio>=1.4.0
    Sphinx>=4.2.0

[options.entry_points]
console_scripts =
    invenio-cli = invenio_cli.cli.cli:invenio_cli

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_cli --cov-report=term-missing
testpaths = docs tests invenio_cli
